# CANOPSRevise

install/: local_setup.sh  setup.sh
install/my_main/lib/my_main/: camera  can  object
install/my_main/share/ament_index/resource_index/package_run_dependencies/: my_main
install/my_main/share/ament_index/resource_index/parent_prefix_path/: my_main
install/my_main/share/my_main/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_main/share/my_main/launch/: camera.launch.py
log/: latest_build
src/my_main/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_main/src/: CANMessaging.cpp  ObjectDetNode.cpp  cameraNode.cpp
